// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoiceFieldset renders a disabled list 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > input {
  margin-left: 0;
  margin-right: 0;
}

.c7 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  color: #57606a;
  font-size: 16px;
  padding: 0;
}

.c8 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #57606a;
  cursor: default;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c6 {
  cursor: pointer;
  cursor: not-allowed;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 > li + li {
  margin-top: 8px;
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className="c1"
    >
      <legend
        className="c2"
      >
        Legend
      </legend>
    </div>
    <ul
      className="c3"
    >
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="false"
              aria-disabled="true"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c6"
              disabled={true}
              id="react-aria-3"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelOne"
            />
          </div>
          <div
            className="c7"
            display="flex"
          >
            <label
              className="c8"
              htmlFor="react-aria-3"
            >
              Label one
            </label>
          </div>
        </div>
      </li>
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="false"
              aria-disabled="true"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c6"
              disabled={true}
              id="react-aria-4"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelTwo"
            />
          </div>
          <div
            className="c7"
            display="flex"
          >
            <label
              className="c8"
              htmlFor="react-aria-4"
            >
              Label two
            </label>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders a fieldset with a description 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 > input {
  margin-left: 0;
  margin-right: 0;
}

.c8 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 16px;
  padding: 0;
}

.c9 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #24292f;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c7 {
  cursor: pointer;
}

.c3 {
  font-size: 14px;
  color: #24292f;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 > li + li {
  margin-top: 8px;
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className="c1"
    >
      <legend
        className="c2"
      >
        Legend
      </legend>
      <span
        className="c3"
        color="fg.default"
        fontSize={1}
      >
        Description
      </span>
    </div>
    <ul
      className="c4"
    >
      <li>
        <div
          className="c5"
          display="flex"
        >
          <div
            className="c6"
          >
            <input
              aria-checked="false"
              aria-disabled="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c7"
              id="react-aria-3"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelOne"
            />
          </div>
          <div
            className="c8"
            display="flex"
          >
            <label
              className="c9"
              htmlFor="react-aria-3"
            >
              Label one
            </label>
          </div>
        </div>
      </li>
      <li>
        <div
          className="c5"
          display="flex"
        >
          <div
            className="c6"
          >
            <input
              aria-checked="false"
              aria-disabled="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c7"
              id="react-aria-4"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelTwo"
            />
          </div>
          <div
            className="c8"
            display="flex"
          >
            <label
              className="c9"
              htmlFor="react-aria-4"
            >
              Label two
            </label>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders a list of items with leading visuals and captions 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c5 > input {
  margin-left: 0;
  margin-right: 0;
}

.c8 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  margin-left: 8px;
  color: #24292f;
}

.c7 > * {
  min-width: 24px;
  min-height: 24px;
  fill: currentColor;
}

.c2 {
  font-size: 16px;
  padding: 0;
}

.c9 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #24292f;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c6 {
  cursor: pointer;
}

.c10 {
  font-size: 12px;
  color: #57606a;
  display: block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 > li + li {
  margin-top: 8px;
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className="c1"
    >
      <legend
        className="c2"
      >
        Legend
      </legend>
    </div>
    <ul
      className="c3"
    >
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="false"
              aria-disabled="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c6"
              id="react-aria-3"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelOne"
            />
          </div>
          <div
            className="c7"
            color="fg.default"
          >
            <svg
              aria-hidden="true"
              className="octicon octicon-mark-github"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path fill-rule=\\"evenodd\\" d=\\"M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z\\"></path>",
                }
              }
              fill="currentColor"
              height={16}
              role="img"
              style={
                Object {
                  "display": "inline-block",
                  "overflow": "visible",
                  "userSelect": "none",
                  "verticalAlign": "text-bottom",
                }
              }
              viewBox="0 0 16 16"
              width={16}
            />
          </div>
          <div
            className="c8"
            display="flex"
          >
            <label
              className="c9"
              htmlFor="react-aria-3"
            >
              Label one
            </label>
            <span
              className="c10"
              color="fg.muted"
              display="block"
              fontSize={0}
            >
              Caption one
            </span>
          </div>
        </div>
      </li>
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="false"
              aria-disabled="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c6"
              id="react-aria-4"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelTwo"
            />
          </div>
          <div
            className="c7"
            color="fg.default"
          >
            <svg
              aria-hidden="true"
              className="octicon octicon-mark-github"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path fill-rule=\\"evenodd\\" d=\\"M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z\\"></path>",
                }
              }
              fill="currentColor"
              height={16}
              role="img"
              style={
                Object {
                  "display": "inline-block",
                  "overflow": "visible",
                  "userSelect": "none",
                  "verticalAlign": "text-bottom",
                }
              }
              viewBox="0 0 16 16"
              width={16}
            />
          </div>
          <div
            className="c8"
            display="flex"
          >
            <label
              className="c9"
              htmlFor="react-aria-4"
            >
              Label two
            </label>
            <span
              className="c10"
              color="fg.muted"
              display="block"
              fontSize={0}
            >
              Caption two
            </span>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders a list with selected items 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className=""
    />
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders a required fieldset 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className=""
    />
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders default 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className=""
    />
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders with a custom name and id passed 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className=""
    />
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders with a hidden legend 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 > input {
  margin-left: 0;
  margin-right: 0;
}

.c6 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #24292f;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c1 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

.c5 {
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c2 > li + li {
  margin-top: 8px;
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className=""
    >
      <legend
        className="c1"
      >
        Legend
      </legend>
    </div>
    <ul
      className="c2"
    >
      <li>
        <div
          className="c3"
          display="flex"
        >
          <div
            className="c4"
          >
            <input
              aria-checked="false"
              aria-disabled="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c5"
              id="react-aria-3"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelOne"
            />
          </div>
          <div
            className="c6"
            display="flex"
          >
            <label
              className="c7"
              htmlFor="react-aria-3"
            >
              Label one
            </label>
          </div>
        </div>
      </li>
      <li>
        <div
          className="c3"
          display="flex"
        >
          <div
            className="c4"
          >
            <input
              aria-checked="false"
              aria-disabled="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c5"
              id="react-aria-4"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelTwo"
            />
          </div>
          <div
            className="c6"
            display="flex"
          >
            <label
              className="c7"
              htmlFor="react-aria-4"
            >
              Label two
            </label>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders with a success validation message 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > input {
  margin-left: 0;
  margin-right: 0;
}

.c7 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  margin-top: 16px;
}

.c10 {
  height: auto;
  overflow: hidden;
}

.c13 {
  margin-right: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  -webkit-animation: 170ms eGcHP cubic-bezier(0.44,0.74,0.36,1);
  animation: 170ms eGcHP cubic-bezier(0.44,0.74,0.36,1);
}

.c2 {
  font-size: 16px;
  padding: 0;
}

.c8 {
  font-weight: bold;
  font-size: 14px;
  display: block;
  color: fg.default;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c6 {
  cursor: pointer;
}

.c12 {
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: success.fg;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 a {
  color: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 > li + li {
  margin-top: 8px;
}

<div>
  <div>
    <fieldset
      aria-describedby="react-aria-1-validationMsg"
      class="c0"
    >
      <div
        class="c1"
      >
        <legend
          class="c2"
        >
          Legend
        </legend>
      </div>
      <ul
        class="c3"
      >
        <li>
          <div
            class="c4"
            display="flex"
          >
            <div
              class="c5"
            >
              <input
                aria-checked="false"
                aria-disabled="false"
                aria-invalid="false"
                aria-required="false"
                class="c6"
                id="react-aria-3"
                name="react-aria-2"
                type="radio"
                value="labelOne"
              />
            </div>
            <div
              class="c7"
              display="flex"
            >
              <label
                class="c8"
                for="react-aria-3"
              >
                Label one
              </label>
            </div>
          </div>
        </li>
        <li>
          <div
            class="c4"
            display="flex"
          >
            <div
              class="c5"
            >
              <input
                aria-checked="false"
                aria-disabled="false"
                aria-invalid="false"
                aria-required="false"
                class="c6"
                id="react-aria-4"
                name="react-aria-2"
                type="radio"
                value="labelTwo"
              />
            </div>
            <div
              class="c7"
              display="flex"
            >
              <label
                class="c8"
                for="react-aria-4"
              >
                Label two
              </label>
            </div>
          </div>
        </li>
      </ul>
    </fieldset>
    <div
      class="c9"
    >
      <div
        class="c10"
        height="auto"
        overflow="hidden"
      >
        <div
          class="c11"
        >
          <span
            class="c12"
            font-size="0"
          >
            <span
              aria-hidden="true"
              class="c13"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-check-circle-fill"
                fill="currentColor"
                height="12"
                role="img"
                style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                viewBox="0 0 12 12"
                width="12"
              >
                <path
                  d="M6 0a6 6 0 100 12A6 6 0 006 0zm-.705 8.737L9.63 4.403 8.392 3.166 5.295 6.263l-1.7-1.702L2.356 5.8l2.938 2.938z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              id="react-aria-1-validationMsg"
            >
              You made the right selection
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChoiceFieldset renders with an error validation message 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > input {
  margin-left: 0;
  margin-right: 0;
}

.c7 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  margin-top: 16px;
}

.c10 {
  height: auto;
  overflow: hidden;
}

.c13 {
  margin-right: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  -webkit-animation: 170ms eGcHP cubic-bezier(0.44,0.74,0.36,1);
  animation: 170ms eGcHP cubic-bezier(0.44,0.74,0.36,1);
}

.c2 {
  font-size: 16px;
  padding: 0;
}

.c8 {
  font-weight: bold;
  font-size: 14px;
  display: block;
  color: fg.default;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c6 {
  cursor: pointer;
}

.c12 {
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: danger.fg;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 a {
  color: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 > li + li {
  margin-top: 8px;
}

<div>
  <div>
    <fieldset
      aria-describedby="react-aria-1-validationMsg"
      class="c0"
    >
      <div
        class="c1"
      >
        <legend
          class="c2"
        >
          Legend
        </legend>
      </div>
      <ul
        class="c3"
      >
        <li>
          <div
            class="c4"
            display="flex"
          >
            <div
              class="c5"
            >
              <input
                aria-checked="false"
                aria-disabled="false"
                aria-invalid="false"
                aria-required="false"
                class="c6"
                id="react-aria-3"
                name="react-aria-2"
                type="radio"
                value="labelOne"
              />
            </div>
            <div
              class="c7"
              display="flex"
            >
              <label
                class="c8"
                for="react-aria-3"
              >
                Label one
              </label>
            </div>
          </div>
        </li>
        <li>
          <div
            class="c4"
            display="flex"
          >
            <div
              class="c5"
            >
              <input
                aria-checked="false"
                aria-disabled="false"
                aria-invalid="false"
                aria-required="false"
                class="c6"
                id="react-aria-4"
                name="react-aria-2"
                type="radio"
                value="labelTwo"
              />
            </div>
            <div
              class="c7"
              display="flex"
            >
              <label
                class="c8"
                for="react-aria-4"
              >
                Label two
              </label>
            </div>
          </div>
        </li>
      </ul>
    </fieldset>
    <div
      class="c9"
    >
      <div
        class="c10"
        height="auto"
        overflow="hidden"
      >
        <div
          class="c11"
        >
          <span
            class="c12"
            font-size="0"
          >
            <span
              aria-hidden="true"
              class="c13"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-alert-fill"
                fill="currentColor"
                height="12"
                role="img"
                style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                viewBox="0 0 12 12"
                width="12"
              >
                <path
                  d="M4.855.708c.5-.896 1.79-.896 2.29 0l4.675 8.351a1.312 1.312 0 01-1.146 1.954H1.33A1.312 1.312 0 01.183 9.058L4.855.708zM7 7V3H5v4h2zm-1 3a1 1 0 100-2 1 1 0 000 2z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              id="react-aria-1-validationMsg"
            >
              You made the wrong selection
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
